--- a/public/styles/layout/settingsPanel.css
+++ b/public/styles/layout/settingsPanel.css
@@ -7,6 +7,7 @@
     top: 60px;
     right: 20px;
     opacity: 0.8;
+    z-index: 15;
     background-color: var(--settings-button-bg-color);
     border-radius: 14px;
     padding: 8px;
